--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.svg">
+    <link rel="shortcut icon" href="favicon.svg" />
     <title>Stranger</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="//vk.com/js/api/openapi.js"></script>
+    <script language="javascript">
+      VK.init({
+        apiId: 7862346,
+      });
+    </script>
   </body>
 </html>
