--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,9 @@
         apiId: 7862346,
       });
     </script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
   </body>
 </html>
