--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,20 @@
     <script src="//vk.com/js/api/openapi.js"></script>
     <script language="javascript">
       VK.init({
-        apiId: 7862346,
+        apiId: 7863614,
       });
     </script>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId            : '141492388020493',
+          autoLogAppEvents : true,
+          xfbml            : true,
+          version          : 'v11.0'
+        });
+      };
+    </script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
