--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="//vk.com/js/api/openapi.js"></script>
-    <script language="javascript">
+    <script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
+    <script type="text/javascript">
       VK.init({
         apiId: 7863614,
       });
     </script>
+    
     <script>
       window.fbAsyncInit = function() {
         FB.init({
