--- a/src/index.html
+++ b/src/index.html
@@ -8,24 +8,32 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
+    <!-- <script
+      src="https://vk.com/js/api/openapi.js?169"
+      type="text/javascript"
+    ></script>
     <script type="text/javascript">
       VK.init({
         apiId: 7863614,
       });
-    </script>
-    
-    <script>
-      window.fbAsyncInit = function() {
+    </script> -->
+
+    <!-- <script>
+      window.fbAsyncInit = function () {
         FB.init({
-          appId            : '141492388020493',
-          autoLogAppEvents : true,
-          xfbml            : true,
-          version          : 'v11.0'
+          appId: "141492388020493",
+          autoLogAppEvents: true,
+          xfbml: true,
+          version: "v11.0",
         });
       };
-    </script>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+    </script> -->
+    <!-- <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js"
+    ></script> -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
